syntax = "proto3";
package computesvc;
option go_package = "github.com/RosettaFlow/Carrier-Go/lib/fighter/computesvc";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "common.proto";

service ComputeProvider {
   rpc GetStatus(google.protobuf.Empty) returns (GetStatusReply) {
    option(google.api.http) = {
            get: "/compute/getStatus"
        };
  }
  rpc GetTaskDetails(GetTaskDetailsReq) returns (GetTaskDetailsReply) {
    option(google.api.http) = {
            post: "/compute/getTaskDetails"
            body: "*"
        };
  }

  rpc UploadShard(stream UploadShardReq) returns (UploadShardReply) {}

  rpc HandleTaskReadyGo(common.TaskReadyGoReq) returns (common.TaskReadyGoReply) {
    option(google.api.http) = {
        post: "/compute/handleTaskReadyGo"
        body: "*"
    };
  }
}

message UploadShardReq {
  message Info {
    string task_id = 1;
    string data_id = 2;
  }
  oneof data {
    Info  meta    = 1;
    bytes content = 2;
  }
}

message UploadShardReply {
    bool   ok  = 1;
    string msg = 2;
}

message GetStatusReply {
    string cpu       = 1;
    string mem       = 2;
    string bandwidth = 3;
}

message GetTaskDetailsReq {
    repeated string task_ids = 1;
}

message GetTaskDetailsReply {
  message Detail {
    string task_id      = 1;
    string task_name    = 2;
    string contract_id  = 3;
    int64  elapsed_time = 4;
    int64  remain_time  = 5;
    string progress     = 6;
    string phase        = 7;
  }
    repeated Detail task_details = 1;
}
